--- a/kadry/src/main/webapp/firma/sub/layout/north.xhtml
+++ b/kadry/src/main/webapp/firma/sub/layout/north.xhtml
@@ -12,27 +12,27 @@
                     <div class="inline-block col-5 bg-taxman text-3xl flex-auto text-white font-bold p-1 border-round ">
                         <h:outputText value="#{wpisView.firma.nazwa}"/>
                     </div>
-                    <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
-                        <h:outputText value="#{wpisView.pracownik.nazwisko}" rendered="#{wpisView.pracownik ne null}"/>
-                    </div>
-                    <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
-                        <h:outputText value="#{wpisView.pracownik.imie}"   rendered="#{wpisView.pracownik ne null}"/>
-                    </div>
-                    <div class="inline-block  col-2 bg-taxman text-2xl flex-auto text-white font-bold text-center p-1 border-round">
-                         <h:outputText value="#{wpisView.umowa.nrkolejny}"   rendered="#{wpisView.umowa ne null}"/>
-                    </div>
-                  <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
-                        <p:selectOneMenu id="rokWpisu" value="#{wpisView.rokWpisu}"  style="width: 100px;">
-                            <f:selectItems value="#{roki.rokiList}"/>
-                            <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
-                        </p:selectOneMenu>
-                    </div>
-                    <div class="inline-block col-3 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
-                       <p:selectOneMenu id="miesiacWpisu" value="#{wpisView.miesiacWpisu}"  style="width: 100px;">
-                            <f:selectItems value="#{mce.mceList}"/>
-                            <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
-                        </p:selectOneMenu>
-                    </div>
+    <!--                    <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
+                            <h:outputText value="#{wpisView.pracownik.nazwisko}" rendered="#{wpisView.pracownik ne null}"/>
+                        </div>
+                        <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
+                            <h:outputText value="#{wpisView.pracownik.imie}"   rendered="#{wpisView.pracownik ne null}"/>
+                        </div>
+                        <div class="inline-block  col-2 bg-taxman text-2xl flex-auto text-white font-bold text-center p-1 border-round">
+                             <h:outputText value="#{wpisView.umowa.nrkolejny}"   rendered="#{wpisView.umowa ne null}"/>
+                        </div>
+                      <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+                            <p:selectOneMenu id="rokWpisu" value="#{wpisView.rokWpisu}"  style="width: 100px;">
+                                <f:selectItems value="#{roki.rokiList}"/>
+                                <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
+                            </p:selectOneMenu>
+                        </div>
+                        <div class="inline-block col-3 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+                           <p:selectOneMenu id="miesiacWpisu" value="#{wpisView.miesiacWpisu}"  style="width: 100px;">
+                                <f:selectItems value="#{mce.mceList}"/>
+                                <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
+                            </p:selectOneMenu>
+                        </div>-->
             </div>
         </h:form>
     
