--- a/kadry/src/main/webapp/pracownik/sub/layout/north.xhtml
+++ b/kadry/src/main/webapp/pracownik/sub/layout/north.xhtml
@@ -12,7 +12,7 @@
                     <div class="inline-block col-5 bg-taxman text-3xl flex-auto text-white font-bold p-1 border-round ">
                         <h:outputText value="#{wpisView.firma.nazwa}"/>
                     </div>
-                    <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
+<!--                    <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
                         <h:outputText value="#{wpisView.pracownik.nazwisko}" rendered="#{wpisView.pracownik ne null}"/>
                     </div>
                     <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
@@ -20,8 +20,8 @@
                     </div>
                     <div class="inline-block  col-2 bg-taxman text-2xl flex-auto text-white font-bold text-center p-1 border-round">
                          <h:outputText value="#{wpisView.umowa.nrkolejny}"   rendered="#{wpisView.umowa ne null}"/>
-                    </div>
-                  <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+                    </div>-->
+<!--                  <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
                         <p:selectOneMenu id="rokWpisu" value="#{wpisView.rokWpisu}"  style="width: 100px;">
                             <f:selectItems value="#{roki.rokiList}"/>
                             <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
@@ -31,6 +31,12 @@
                        <p:selectOneMenu id="miesiacWpisu" value="#{wpisView.miesiacWpisu}"  style="width: 100px;">
                             <f:selectItems value="#{mce.mceList}"/>
                             <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
+                        </p:selectOneMenu>
+                    </div>-->
+                    <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+                      <p:selectOneMenu id="rokWpisu" value="#{wpisView.okreswpisu}"  style="width: 150px;" converter="#{okresConverter}">
+                          <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
+                            <p:ajax event="change" partialSubmit="true" global="false" update="@(.formadmin)"  listener="#{updateClassView.updateUmowa()}"/>
                         </p:selectOneMenu>
                     </div>
             </div>
