--- a/kadry/src/main/webapp/pracownikhistoria/sub/layout/north.xhtml
+++ b/kadry/src/main/webapp/pracownikhistoria/sub/layout/north.xhtml
@@ -12,7 +12,7 @@
                     <div class="inline-block col-5 bg-taxman text-3xl flex-auto text-white font-bold p-1 border-round ">
                         <h:outputText value="#{wpisView.firma.nazwa}"/>
                     </div>
-                    <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
+<!--                    <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
                         <h:outputText value="#{wpisView.pracownik.nazwisko}" rendered="#{wpisView.pracownik ne null}"/>
                     </div>
                     <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
@@ -31,7 +31,7 @@
                        <p:selectOneMenu id="miesiacWpisu" value="#{wpisView.miesiacWpisu}"  style="width: 100px;">
                             <f:selectItems value="#{mce.mceList}"/>
                             <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
-                        </p:selectOneMenu>
+                        </p:selectOneMenu>-->
                     </div>
             </div>
         </h:form>
